--- a/templates/info_search/base.html
+++ b/templates/info_search/base.html
@@ -20,18 +20,13 @@
 				<p>
 				这里是信息查询系统，您可以点击以下按钮浏览相应内容。
 				</p>
-                <div class ="col-md-2 column">
-				<a class="btn btn-primary btn-large" href="/online/avr_rating">平均评分</a>
-                <br>
-                </div>
-                <div class ="col-md-4 column">
-                <a class="btn btn-primary btn-large" href="/online/cou_info?XN=2016-2017&XQ=2">2016-2017-2学期选修课信息</a>
-                <br>
-                </div>
-                <div class ="col-md-4 column">
-				<a class="btn btn-primary btn-large" href="/online/cou_info?XN=2017-2018&XQ=1">2017-2018-1学期选修课信息</a>
-                <br>
-                </div>
+				<a class="btn btn-default" href="/online/avr_rating">全部平均评分</a>
+                <a class="btn btn-default" href="/online/avr_rating?maj_avr=1">您所在专业热门课程</a>
+                <br><br>
+                <a class="btn btn-primary" href="/online/cou_info?XN=2016-2017&XQ=2">2016-2017-2学期选修课信息</a>
+
+				<a class="btn btn-primary" href="/online/cou_info?XN=2017-2018&XQ=1">2017-2018-1学期选修课信息</a>
+                
                 </div>
             </div>
             <div class="col-md-3 column">
