add lfm/fix button and url

--- a/templates/recommend/item_cf.html
+++ b/templates/recommend/item_cf.html
@@ -113,16 +113,20 @@
 		</div>
 	</div>
     <div>
-                <p>
-					<a class="btn btn-default" href="/online/user_cf">基于用户的推荐</a>  
-					<a class="btn btn-default" href="/online/item_cf">基于课程的推荐</a>  
-                    <a class="btn btn-default" href="?no_time_conflicit=1">所有无时间冲突课程</a>
-                    <a class="btn btn-default" href="/online/avr_rating?maj_avr=1">您所在专业热门课程</a>
-                    <p>
-                        <a class="btn btn-primary btn-large" href="/online/avr_rating">更多信息查询入口</a>
-                    </p>
-                     
+                <p>推荐算法1：
+					<a class="btn btn-success" href="/online/user_cf">基于用户的协同过滤推荐</a>  
+					<a class="btn btn-success" href="/online/item_cf">基于课程的协同过滤推荐</a> 
                 </p>
+                <p>推荐算法2：
+                    <a class="btn btn-success" href="/online/lfm">基于隐语义算法的推荐</a> 
+                </p>
+                <p>其他信息：
+                    <a class="btn btn-primary" href="?no_time_conflicit=1">所有无时间冲突课程</a>
+                    <a class="btn btn-primary" href="/online/avr_rating?maj_avr=1">您所在专业热门课程</a>                  
+                    <a class="btn btn-primary" href="/online/avr_rating">更多信息查询入口</a>
+                </p>
+                     
+                
     </div>
 		<div id="legend">
 			<legend>推荐课程</legend>
