--- a/templates/info_collect/col_rat.html
+++ b/templates/info_collect/col_rat.html
@@ -62,6 +62,16 @@
 						</div>
 					</div>
             {% endif %}	
+         {% ifequal first_log_in 1 %}
+        <div class="panel panel-success">
+			<div class="panel-heading">
+				<h3 class="panel-title">系统提示</h3>
+			</div>
+			<div class="panel-body">
+				检测到您初次登录此系统，帮助信息在页面最下方。
+			</div>
+		</div>
+        {% endifequal %}
 
 		</div>	
 	</div>
@@ -102,12 +112,15 @@
     <div class="row clearfix">
         <div class="col-md-2 column">
     <input type="submit" class="btn btn-success" value = "提交" />
+    <br>
+        <br>
         </div>
         <div class="col-md-2 column">
     {% if count %}
     <a href="/online/spare_time" class="btn btn-default" >跳过</a>
     {% endif %}
         </div>
+        
     </div>
 </form>
 	</div>
@@ -128,7 +141,15 @@
 		</div>
 
 	</div>
-    
+     {% ifequal first_log_in 1 %}
+        <div id="legend">
+            <legend>帮助信息</legend>
+        </div>
+        <p>
+        <a class="btn btn-warning" href="?close_help=1">关闭帮助信息</a><br><br>
+        </p>
+        <img class="img-responsive" src="/site_media/static/img/collect_rating.png" alt="collect_rating_help.png">
+        {% endifequal %}
 </div>
 
 {% endblock %}
