--- a/templates/info_collect/spare_time_new.html
+++ b/templates/info_collect/spare_time_new.html
@@ -52,7 +52,17 @@
 
 <div class="container">	
 <form name='col_spare_time' method="POST" enctype="multipart/form-data">
-{% csrf_token %}			
+{% csrf_token %}	
+        {% ifequal first_log_in 1 %}
+        <div class="panel panel-success">
+			<div class="panel-heading">
+				<h3 class="panel-title">系统提示</h3>
+			</div>
+			<div class="panel-body">
+				检测到您初次登录此系统，帮助信息在页面最下方。
+			</div>
+		</div>
+        {% endifequal %}		
 	<div class="row clearfix">
 		<div class="col-md-8 column">
 			<div id="legend">
@@ -153,10 +163,18 @@
 			</tbody>
 		</table>
 		<a href="?QK=1" class="btn btn-danger">清空</a>
+        <br>
+        <br>
 		</div>
 		
 	</div>
-
+        {% ifequal first_log_in 1 %}
+        <div id="legend">
+            <legend>帮助信息</legend>
+        </div>
+        <a class="btn btn-primary" href="?close_help=1">关闭帮助信息</a>
+        <img class="img-responsive" src="/site_media/static/img/spare_time.png" alt="spare_time_help.png">
+        {% endifequal %}
 </div>
 {% endblock %}	
 	
