--- a/templates/info_search/no_time_conflicit.html
+++ b/templates/info_search/no_time_conflicit.html
@@ -14,6 +14,16 @@
 			</div>
 		</div>
 {% endifequal %}
+{% ifequal no_spare_time 2 %}
+        <div class="panel panel-danger">
+			<div class="panel-heading">
+				<h3 class="panel-title">系统提示</h3>
+			</div>
+			<div class="panel-body">
+				经筛选，您添加的空闲时间内没有选修课。请重新填写空课信息。
+			</div>
+		</div>
+{% endifequal %}
 
 {% ifequal spare_time 1 %}
 		<div id="legend">
