--- a/templates/recommend/tuijian.html
+++ b/templates/recommend/tuijian.html
@@ -46,6 +46,16 @@
 			</div>
 		</div>
 	{% endifequal %}
+    {% ifequal first_log_in 1 %}
+        <div class="panel panel-success">
+			<div class="panel-heading">
+				<h3 class="panel-title">系统提示</h3>
+			</div>
+			<div class="panel-body">
+				检测到您初次登录此系统，帮助信息在页面最下方。
+			</div>
+		</div>
+        {% endifequal %}
     {% ifequal notworked 1 %}
     <div id="legend">
 			<legend>平均评分</legend>
@@ -240,6 +250,17 @@
                         </div>
                                
                 </div>
+        {% ifequal first_log_in 1 %}
+        <div id="legend">
+            <legend>帮助信息</legend>
+        </div>
+        <p>
+        <a class="btn btn-warning" href="?close_help=1">关闭帮助信息</a><br>
+        </p>
+        <img class="img-responsive" src="/site_media/static/img/recommend_index2.png" alt="recommend_index2_help.png">
+        <img class="img-responsive" src="/site_media/static/img/recommend_item_cf.png" alt="recommend_item_cf_help.png">
+        {% endifequal %}
+</div>
 </div>
 </div>
 {% endblock %}
