--- a/templates/info_collect/spare_time_new.html
+++ b/templates/info_collect/spare_time_new.html
@@ -172,7 +172,9 @@
         <div id="legend">
             <legend>帮助信息</legend>
         </div>
-        <a class="btn btn-primary" href="?close_help=1">关闭帮助信息</a>
+        <p>
+        <a class="btn btn-warning" href="?close_help=1">关闭帮助信息</a><br><br>
+        </p>
         <img class="img-responsive" src="/site_media/static/img/spare_time.png" alt="spare_time_help.png">
         {% endifequal %}
 </div>
