--- a/templates/recommend/tuijian.html
+++ b/templates/recommend/tuijian.html
@@ -255,7 +255,7 @@
             <legend>帮助信息</legend>
         </div>
         <p>
-        <a class="btn btn-warning" href="?close_help=1">关闭帮助信息</a><br>
+        <a class="btn btn-warning" href="?close_help=1">关闭帮助信息</a><br><br>
         </p>
         <img class="img-responsive" src="/site_media/static/img/recommend_index2.png" alt="recommend_index2_help.png">
         <img class="img-responsive" src="/site_media/static/img/recommend_item_cf.png" alt="recommend_item_cf_help.png">
