--- a/templates/recommend/item_cf.html
+++ b/templates/recommend/item_cf.html
@@ -35,6 +35,17 @@
 		</div>
 		
 	{% endifequal %}
+    {% ifequal invalid_rating 1 %}
+		<div class="panel panel-danger">
+			<div class="panel-heading">
+				<h3 class="panel-title">系统提示</h3>
+			</div>
+			<div class="panel-body">
+				很抱歉！您的评分数据标准差小于基准值，无法为您生成推荐结果。<br>在评分时请尽可能根据您对课程的喜爱程度打分。例如:给您最喜欢的课程打5分,其次的打4分。给您最不喜欢的课程打1分，其次的打2分。谢谢您的理解。
+			</div>
+		</div>
+		
+	{% endifequal %}
 
 	{% ifequal error 2 %}
 		<div class="panel panel-danger">
@@ -130,7 +141,7 @@
                 <p>推荐算法2：
                     <a class="btn btn-success" href="/online/lfm">基于隐语义算法的推荐</a> 
                 </p>
-                <p>其他信息：
+                <p>其他 信息 ：
                     <a class="btn btn-primary" href="?no_time_conflicit=1">所有无时间冲突课程</a>
                     <a class="btn btn-primary" href="/online/avr_rating?maj_avr=1">您所在专业热门课程</a>                  
                     <a class="btn btn-primary" href="/online/avr_rating">更多信息查询入口</a>
