--- a/templates/recommend/tuijian.html
+++ b/templates/recommend/tuijian.html
@@ -32,7 +32,7 @@
 				<h4>很抱歉！您的评分数据标准差小于基准值，无法为您生成推荐结果。<br>在评分时请尽可能根据您对课程的喜爱程度打分。例如:给您最喜欢的课程打5分,其次的打4分。给您最不喜欢的课程打1分，其次的打2分。谢谢您的理解。
                 </h4>
                 <p>
-                <a href="?update_rating=1" class="btn btn-success" >更改空闲时间</a>
+                <a href="?update_rating=1" class="btn btn-success" >重新填写评分</a>
                 </p>
             </div>
             
