--- a/templates/recommend/item_cf.html
+++ b/templates/recommend/item_cf.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% load account_tags %}
+
 {% block head_title %}课程推荐{% endblock %}
 
 {% block body_class %}home{% endblock %}
