--- a/templates/recommend/tuijian.html
+++ b/templates/recommend/tuijian.html
@@ -279,5 +279,10 @@
         {% endifequal %}
 </div>
 </div>
-</div>
+<!-- jQuery -->
+    <script src="/site_media/static/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/site_media/static/js/bootstrap.min.js"></script>
+
 {% endblock %}
