--- a/templates/info_collect/spare_time_new.html
+++ b/templates/info_collect/spare_time_new.html
@@ -135,11 +135,11 @@
 		
 		</div>
 		<div class="col-md-1 column">
-			<input type="submit" class="btn btn-primary" value = "添加" />
-            <br>            
+			<input type="submit" class="btn btn-primary" value = "添加" /><p></p>
+                       
 		</div>	
 		<div class="col-md-1 column">
-			<a href="?WC=1" class="btn btn-success" title="计算过程可能需要15s，请耐心等待……">查看推荐</a> 
+			<a href="?WC=1" class="btn btn-success" title="计算过程可能需要15s，请耐心等待……">查看推荐</a><p></p>
         </div>
 		
 	<div id="legend">
