--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -4,7 +4,15 @@
     <head>
     
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- Bootstrap Core CSS -->
+		<link href="/site_media/static/css/bootstrap.min.css" rel="stylesheet">
+		<!-- Custom CSS -->
+		<link href="/site_media/static/css/landing-page.css" rel="stylesheet">
+
+		<!-- Custom Fonts -->
+		<link href="/site_media/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+        
         <title>{% block head_title_base %}{% if SITE_NAME %}{{ SITE_NAME }} | {% endif %}{% block head_title %}{% endblock %}{% endblock %}</title>
         {% block viewport %}
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
