--- a/templates/recommend/tuijian.html
+++ b/templates/recommend/tuijian.html
@@ -252,7 +252,7 @@
                         {% if bind_id %}
                         <h4>绑定学号：{{bind_id}}</h4>
                         {% endif %}
-                       
+                        <legend></legend>
                         </div>
                         
                         <div>
