--- a/templates/info_search/base.html
+++ b/templates/info_search/base.html
@@ -54,7 +54,7 @@
                         {% if bind_id %}
                         <h4>绑定学号：{{bind_id}}</h4>
                         {% endif %}
-                       
+                        <legend></legend>
                         </div>
               </div>
           </div>
